# directors-chair

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
characters/friend_robot/: prompt.txt
characters/viking_gorilla/: prompt.txt  variations.json
config/: config.json
docs/: console-design.md  downloading.md  seed.md  step2.md  training-loras.md
prompts/: gale.txt  nomad.txt  nomad1.txt  nomad2.txt  nomad3.txt  raider.txt  raider_goggles.txt  raider_greasy.txt  raider_heavy.txt  raider_hockey.txt  viking.gorilla.txt
scripts/: chair.py  generate_synthetic_data.py  setup.py  train_lora.py  violence_experiment.py
skills/: directors-chair.md  kling-3-prompting.md
src/directors_chair/: cli.py  factory.py  generators.py  model_manager.py
src/directors_chair.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
storyboards/campfire_chat/: campfire_chat.json  shot1_beat.txt  shot1_keyframe.txt  shot1_layout.txt  shot2_beat.txt  shot2_keyframe.txt  shot2_layout.txt  shot3_beat.txt  shot3_keyframe.txt  shot3_layout.txt  shot4_beat.txt  shot4_keyframe.txt  shot5_beat.txt  shot5_keyframe.txt  shot6_beat.txt  shot6_keyframe.txt  shot6_layout.txt  shot7_beat.txt  shot7_keyframe.txt  shot7_layout.txt
storyboards/desert_run/: desert_run.json  desert_run_shot1_beat1.txt  desert_run_shot1_keyframe.txt  desert_run_shot1_layout.txt  desert_run_shot2_beat1.txt  desert_run_shot2_beat2.txt  desert_run_shot2_keyframe.txt  desert_run_shot2_layout.txt
storyboards/desert_run_dead_zombie/: desert_run_dead_zombie.json  shot1_beat1.txt  shot1_beat2.txt  (+8 more)
(+371 files in other folders)
